# nba-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync-schedule.yml
docs/: index.html  nba_sas.ics  nba_schedule.ics
src/nba_cli/: __init__.py  api.py  calendar.py  cli.py  config.py
